<resources>
    <string name="app_name">LocalNotesApp</string>
    <string name="add_note">Add Note</string>
    <string name="note_title">Note Title</string>
    <string name="note_description">Note Description</string>
    <string name="note_date">Note Date</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="start_typing">Start typing</string>
    <string name="delete">Delete</string>
    <string name="my_notes">My Notes</string>
</resources>