<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_margin="6dp"
    android:elevation="4dp"
    app:cardCornerRadius="8dp"
    app:cardBackgroundColor="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_title"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_description"
            android:textSize="12sp"
            android:textColor="@android:color/darker_gray"
            android:maxLines="3"
            android:ellipsize="end"
            android:layout_marginTop="4dp"
            android:layout_below="@id/tvTitle"
            android:layout_above="@id/tvDate"
            />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/note_date"
            android:textSize="12sp"
            android:textColor="@android:color/darker_gray"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>